fix overflow 2

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 
 $legendWidth: 150px;
 
-html{
+html, body{
   overflow-x: hidden;
 }
 
